Add quick way to get transcript

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,14 @@
     {
       "matches": ["*://*.youtube.com/*"],
       "js": ["content.js"],
-      "css": ["styles.css"]
+      "css": ["styles.css"],
+      "run_at": "document_start"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["yt-injector.js"],
+      "matches": ["*://*.youtube.com/*"]
     }
   ],
   "action": {
