Fix title style of button

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
       "matches": ["*://*.youtube.com/*"],
       "js": ["content.js"],
       "css": ["styles.css"],
-      "run_at": "document_start"
+      "run_at": "document_end"
     }
   ],
   "web_accessible_resources": [
